Ensure that PK assay Reference notes do not overflow

--- a/trunk/manta/war/WEB-INF/resources/apps/common/theme/manta.css
+++ b/trunk/manta/war/WEB-INF/resources/apps/common/theme/manta.css
@@ -205,7 +205,7 @@ ul {
 }
 
 .study-info .xforms-textarea { 
-  width: 40em;
+  width: 97%;
 }
 .fixed-width {
     width: 12em;
